--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   "packageManager": "pnpm@10.28.1",
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "echarts": "^6.0.0",
     "element-plus": "^2.13.1",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "@types/node": "^25.0.10",
     "@vitejs/plugin-vue": "^6.0.3",
     "sass": "^1.97.3",
+    "tailwindcss": "^4.1.18",
     "unplugin-auto-import": "^21.0.0",
     "unplugin-vue-components": "^31.0.0",
     "vite": "^7.3.1",
