完成活动管理栏目

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
       ]
     },
     "types": [
-      "@amap/amap-jsapi-types"
+      "@amap/amap-jsapi-types",
+      "auto-imports.d.ts",
+      "components.d.ts",
     ]
   },
 }
